# YOLOv8_object_tracking

./: CMakeLists.txt  README.md
json/: session_dump_pose.json
src/: helpers.cpp  helpers.hpp  inferenceDriverONNX.cpp  inferenceDriverONNX.hpp  main.cpp  structures.h  structures.hpp  trackManager.cpp  trackManager.hpp
tests/: utest_object_tracking.cpp
